@@ -2424,7 +2424,6 @@ OpenCache(Image *image,const MapMode mode,ExceptionInfo *exception)
           }
         case MemoryCache:
           {
-            LiberateMagickResource(MemoryResource,cache_info->length);
             break;
           }
         case DiskCache:
@@ -2498,14 +2497,21 @@ OpenCache(Image *image,const MapMode mode,ExceptionInfo *exception)
   if ((offset/number_pixels == (sizeof(PixelPacket)+sizeof(IndexPacket))) &&
       (offset == (magick_uint64_t) ((size_t) offset)) &&
       ((cache_info->type == UndefinedCache) ||
-       (cache_info->type == MemoryCache)) &&
-      (AcquireMagickResource(MemoryResource,offset)))
+       (cache_info->type == MemoryCache))
+      )
     {
-      MagickReallocMemory(PixelPacket *,cache_info->pixels,(size_t) offset);
-      pixels=cache_info->pixels;
+      pixels=MagickReallocateResourceLimitedMemory(PixelPacket *,
+                                                   cache_info->pixels,
+                                                   (size_t) offset);
       if (pixels == (PixelPacket *) NULL)
-        LiberateMagickResource(MemoryResource,offset);
+      {
+        MagickFreeResourceLimitedMemory(cache_info->pixels);
+      }
       else
+      {
+        cache_info->pixels=pixels;
+      }
+      if (pixels != (PixelPacket *) NULL)
         {
           /*
             Create in-memory pixel cache.
@@ -3623,8 +3629,7 @@ DestroyCacheInfo(Cache cache_info)
   */
   if (MemoryCache == cache_info->type)
     {
-      MagickFreeMemory(cache_info->pixels);
-      LiberateMagickResource(MemoryResource,cache_info->length);
+      MagickFreeResourceLimitedMemory(cache_info->pixels);
     }
   else if (MapCache == cache_info->type)
     {
