@@ -35,6 +35,12 @@
 <div class="document">
 
 
+<p>2021-01-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;bobsdell">bfriesen<span>&#64;</span>bobsdell</a>&gt;</p>
+<blockquote>
+* magick/pixel_cache.c: Memory cache implementation of pixel cache
+now uses resource limited memory allocator.  It was previously
+resource limited, but by using the resource allocation APIs
+directly.</blockquote>
 <p>2021-01-09  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;bobsdell">bfriesen<span>&#64;</span>bobsdell</a>&gt;</p>
 <blockquote>
 * coders/tiff.c: Remove unintended double-charging for memory
